syntax="proto3";

package xraftpb;

message RequestVoteArgs{
    int32 term=1;
    int32 candidateId=2;
    int32 lastLogTerm=3;
    int32 lastLogIndex=4;
}

message RequestVoteReply{
    int32 term=1;
    bool voteGranted=2;
}


service XRaft{
    rpc RequestVote (RequestVoteArgs) returns (RequestVoteReply){}
    rpc AppendEntries(AppendEntriesArgs) returns (AppendEntriesReply){}
}

message LogEntry{
    int32 logIndex=1;
    int32 logTerm=2;
    string logCommand=3;
}
message AppendEntriesArgs{
    int32 term=1;
    int32 leaderId=2;
    int32 prevLogTerm=3;
    int32 prevLogIndex=4;
    repeated LogEntry entries=5;
    int32 leaderCommit=6;
}

message AppendEntriesReply{
    int32 term=1;
    int32 nextIndex=2;
    bool success=3;
}


message installSnapshotArgs  {
	int32 term=1;
	int32 leaderId=2;
	int32 lastIncludedIndex=3;
	int32 lastIncludedTerm=4;
	bytes data=5;
}
